Add email variables to specific env for publisher
This commit adds environment specific variables for mainstream
publisher's email groups. We only want to allow one email group to be
used per development environments as notify (email provider we're
switching to) has a finite amount of addresses we can use.

I also removed
`govuk::apps::publisher::email_group_force_publish_alerts:
'test-mainstream-force-publishing-alerts@digital.cabinet-office.gov.uk'`
as I'm not sure why it exists as no google group is set up with that
address nor is the address mention in the publisher repo.

Trello:
https://trello.com/c/AqUPUuiF/1917-send-publisher-emails-to-a-google-group-in-integration-and-staging

--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -43,6 +43,10 @@ govuk::apps::hmrc_manuals_api::allow_unknown_hmrc_manual_slugs: true
 govuk::apps::licencefinder::elasticsearch_uri: 'https://vpc-blue-elasticsearch6-domain-uolbxqjhkiqmg5w3gg7gio5sty.eu-west-1.es.amazonaws.com'
 govuk::apps::link_checker_api::govuk_basic_auth_credentials: "%{hiera('http_username')}:%{hiera('http_password')}"
 govuk::apps::publisher::govuk_notify_template_id: "759acac6-da53-4a19-b591-b7538c7c39de"
+govuk::apps::publisher::email_group_dev: 'mainstream-publisher-notifications-integration@digital.cabinet-office.gov.uk'
+govuk::apps::publisher::email_group_business: 'mainstream-publisher-notifications-integration@digital.cabinet-office.gov.uk'
+govuk::apps::publisher::email_group_citizen: 'mainstream-publisher-notifications-integration@digital.cabinet-office.gov.uk'
+govuk::apps::publisher::email_group_force_publish_alerts: 'mainstream-publisher-notifications-integration@digital.cabinet-office.gov.uk'
 govuk::apps::publishing_api::event_log_aws_bucketname: 'govuk-publishing-api-event-log-integration'
 govuk::apps::publishing_api::content_api_prototype: true
 govuk::apps::router::sentry_environment: 'integration'
