--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -469,6 +469,7 @@ govuk::apps::email_alert_api::unicorn_worker_processes: '10'
 # This list should be kept in sync with https://www.notifications.service.gov.uk/services/ecfc7e2f-5145-45a6-9413-5d9b6e813ea9/users
 govuk::apps::email_alert_api::email_address_override_whitelist:
   - govuk-email-courtesy-copies@digital.cabinet-office.gov.uk
+  - alan.gabbianelli@digital.cabinet-office.gov.uk
   - alex.jurubita@digital.cabinet-office.gov.uk
   - andy.maidment@digital.cabinet-office.gov.uk
   - ben.thorner@digital.cabinet-office.gov.uk
