--- a/hieradata_aws/class/draft_frontend.yaml
+++ b/hieradata_aws/class/draft_frontend.yaml
@@ -8,5 +8,6 @@ govuk::apps::manuals_frontend::vhost: 'draft-manuals-frontend'
 govuk::apps::service_manual_frontend::vhost: 'draft-service-manual-frontend'
 govuk::apps::smartanswers::vhost: 'draft-smartanswers'
 
+govuk::apps::static::asset_host: "https://draft-origin.%{hiera('app_domain')}"
 govuk::apps::static::draft_environment: true
 govuk::apps::static::vhost: 'draft-static'
