--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -1309,6 +1309,7 @@ rcs::tmptime: '7'
 
 router::nginx::app_specific_static_asset_routes:
   '/assets/government-frontend/': 'government-frontend'
+  '/assets/static/': 'static'
 
 # Note: it's important that all targets here have matching host entries both in
 # production, and on the dev VM, otherwise nginx will fail to start.
