--- a/hieradata_aws/staging.yaml
+++ b/hieradata_aws/staging.yaml
@@ -331,6 +331,8 @@ licensify::apps::licensify_feed::environment: 'staging'
 licensify::apps::licensify::alert_5xx_warning_rate: 0.1
 licensify::apps::licensify::alert_5xx_critical_rate: 0.15
 
+mongodb::server::version: '2.4.9'
+
 monitoring::checks::aws_origin_domain: "staging.govuk.digital"
 monitoring::checks::whitehall_overdue_check_period: 'inoffice'
 monitoring::checks::sidekiq::enable_signon_check: false
