--- a/hieradata_aws/staging.yaml
+++ b/hieradata_aws/staging.yaml
@@ -395,20 +395,62 @@ monitoring::checks::rds::servers:
 monitoring::checks::smokey::environment: 'staging_aws'
 monitoring::checks::smokey::disable_during_data_sync: true
 monitoring::checks::smokey::features:
+  check_ab_testing:
+    feature: ab_testing
+  check_assets:
+    feature: assets
+  check_benchmarking:
+    feature: benchmarking
   check_caching:
     feature: caching
+  check_collections:
+    feature: collections
   check_contacts:
     feature: contacts
+  check_content_data_admin:
+    feature: content_data_admin
+  check_csv_preview:
+    feature: csv_preview
+  check_draft_environment:
+    feature: draft_environment
+  check_email_sign_up:
+    feature: email_sign_up
+  check_feedback:
+    feature: feedback
+  check_finder_frontend:
+    feature: finder_frontend
+  check_foreign_travel_advice:
+    feature: foreign_travel_advice
   check_frontend:
     feature: frontend
+  check_gov_uk:
+    feature: gov_uk
+  check_gov_uk_redirect:
+    feature: gov_uk_redirect
   check_government_frontend:
     feature: government_frontend
+  check_licence_finder:
+    feature: licence_finder
+  check_licensing:
+    feature: licensing
+  check_manuals_frontend:
+    feature: manuals_frontend
+  check_public_api:
+    feature: public_api
+  check_publishing_tools:
+    feature: publishing_tools
   check_router:
     feature: router
   check_search:
     feature: search
+  check_service_manual:
+    feature: service_manual
+  check_signon:
+    feature: signon
   check_smartanswers:
     feature: smartanswers
+  check_transition:
+    feature: transition
   check_waf:
     feature: waf
   check_whitehall:
