--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -505,6 +505,7 @@ govuk_ci::master::pipeline_jobs:
       - 'integration'
       - 'staging'
       - 'production'
+  middleman-search: {}
   omniauth-gds: {}
   optic14n: {}
   performanceplatform-client.py: {}
