--- a/development-vm/Procfile
+++ b/development-vm/Procfile
@@ -8,7 +8,7 @@ frontend-worker:       govuk_setenv frontend              ./run_in.sh ../../fron
 # planner used port 3007
 # rummager used port 3009
 smartanswers:          govuk_setenv smartanswers          ./run_in.sh ../../smart-answers  bundle exec rails server -p 3010
-calendars:             govuk_setenv calendars             ./run_in.sh ../../calendars      bundle exec rails server -p 3011
+# calendars used port 3011
 static:                govuk_setenv static                ./run_in.sh ../../static         bundle exec rails server -p 3013
 licencefinder:         govuk_setenv licencefinder         ./run_in.sh ../../licence-finder bundle exec rails server -p 3014
 # migratorator used port 3015
