--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -150,7 +150,7 @@ monitoring::checks::sidekiq::enable_signon_check: false
 monitoring::checks::pingdom::enable: false
 monitoring::checks::aws_iam_key::region: 'eu-west-1'
 monitoring::checks::smokey::environment: 'integration'
-monitoring::checks::smokey::disable_during_data_sync: true
+monitoring::checks::smokey::ensure: 'absent'
 monitoring::uptime_collector::environment: 'integration'
 monitoring::contacts::slack_username: 'CI'
 
