--- a/hieradata/production.yaml
+++ b/hieradata/production.yaml
@@ -350,6 +350,7 @@ monitoring::checks::aws_iam_key::enabled: false
 monitoring::checks::aws_iam_key::region: 'eu-west-1'
 monitoring::checks::aws_iam_key::max_aws_iam_key_age: 90
 monitoring::checks::smokey::environment: 'production'
+monitoring::checks::smokey::ensure: 'absent'
 monitoring::contacts::notify_pager: true
 monitoring::contacts::notify_slack: true
 monitoring::contacts::slack_channel: '#govuk-alerts'
