--- a/hieradata/staging.yaml
+++ b/hieradata/staging.yaml
@@ -347,7 +347,7 @@ monitoring::checks::aws_iam_key::enabled: false
 monitoring::checks::aws_iam_key::region: 'eu-west-1'
 monitoring::checks::aws_iam_key::max_aws_iam_key_age: 90
 monitoring::checks::smokey::environment: 'staging'
-monitoring::checks::smokey::disable_during_data_sync: true
+monitoring::checks::smokey::ensure: 'absent'
 monitoring::uptime_collector::environment: 'staging'
 monitoring::contacts::notify_slack: true
 monitoring::contacts::slack_channel: '#govuk-alerts-staging'
