--- a/hieradata_aws/class/staging/jenkins.yaml
+++ b/hieradata_aws/class/staging/jenkins.yaml
@@ -73,6 +73,7 @@ govuk_jenkins::job_builder::jobs:
   - govuk_jenkins::jobs::send_bulk_email
   - govuk_jenkins::jobs::smokey
   - govuk_jenkins::jobs::smokey_deploy
+  - govuk_jenkins::jobs::transition_load_site_config
   - govuk_jenkins::jobs::whitehall_publisher_notifications
 
 govuk_jenkins::jobs::deploy_cdn::enable_slack_notifications: false
