--- a/hieradata_aws/class/production/jenkins.yaml
+++ b/hieradata_aws/class/production/jenkins.yaml
@@ -48,6 +48,7 @@ govuk_jenkins::job_builder::jobs:
   - govuk_jenkins::jobs::clear_varnish_cache
   - govuk_jenkins::jobs::content_data_api
   - govuk_jenkins::jobs::deploy_app
+  - govuk_jenkins::jobs::deploy_docs
   - govuk_jenkins::jobs::deploy_emergency_banner
   - govuk_jenkins::jobs::deploy_puppet
   - govuk_jenkins::jobs::email_alert_check
